fix header to show only on mobile

--- a/src/app/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.scss
+++ b/src/app/layouts/admin-layout/components/admin-sidebar/admin-sidebar.component.scss
@@ -6,6 +6,7 @@
     align-items: center;
     text-align: center;
     width: 100%;
+    height: 100%;
     position: static;
     // position: relative;
     // z-index: 1;
@@ -194,4 +195,68 @@ i.closed {
     border-bottom-right-radius: 8px;
     width: 100%;
     height: 30px;
+}
+
+
+.user-container{
+    margin-top: auto;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 32;
+    justify-content: space-between;
+    background: #080808;
+}
+
+.user-container .left  {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+}
+
+.user-container .left:hover span{
+    color: #868484;
+
+}
+
+.user-container .left  img {
+    height: 24px;
+    width: 24px;
+    background: aqua;
+    border-radius: 50%;
+    margin: 4px 10px 4px 4px;
+}
+
+.user-container .left  span {
+    font-family: Open Sans,Lucida Sans,Lucida Grande,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 12px;
+    line-height: 32px;
+    font-weight: 700;
+    color: #555;
+}
+
+.user-container .right a{
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 4px;
+    padding: 6px;
+    width: 16px;
+    height: 16px;
+}
+
+.user-container .right a:hover {
+    color: #868484;
 }
